--- a/arch/arm/dts/meson-a1.dtsi
+++ b/arch/arm/dts/meson-a1.dtsi
@@ -124,6 +124,11 @@
 				clock-names = "xtal", "pclk", "baud";
 				status = "disabled";
 			};
+
+			hwrng: rng@5118 {
+				compatible = "amlogic,meson-rng";
+				reg = <0x0 0x5118 0x0 0x4>;
+			};
 		};
 
 		gic: interrupt-controller@ff901000 {
